[gd_scene load_steps=11 format=3 uid="uid://cj8vlqcsnptyc"]

[ext_resource type="Script" path="res://GUI/chat_select.gd" id="1_prm7m"]
[ext_resource type="Shader" path="res://GUI/CircularIcon.gdshader" id="1_v8340"]
[ext_resource type="Texture2D" uid="uid://d3rf6aw43rb02" path="res://assets/DefaultProfilePic.jpeg" id="2_fys64"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_guoq7"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
border_color = Color(0, 0.960784, 0.321569, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2xr2w"]
shader = ExtResource("1_v8340")

[sub_resource type="LabelSettings" id="LabelSettings_qipl5"]
font_size = 12
font_color = Color(0.290196, 0.701961, 0.815686, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f8iyg"]
font_color = Color(0.490196, 0.490196, 0.490196, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tub36"]
font_color = Color(0.258824, 0.756863, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fndwc"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4r6ii"]
bg_color = Color(0.282353, 0.282353, 0.282353, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ChatSelect" type="PanelContainer"]
clip_contents = true
theme_override_styles/panel = SubResource("StyleBoxFlat_guoq7")
script = ExtResource("1_prm7m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="pic" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2xr2w")
layout_mode = 2
texture = ExtResource("2_fys64")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="username" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
text = "Unnamed Contact"
max_lines_visible = 1

[node name="Preview" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "hello , goodmorning"
label_settings = SubResource("LabelSettings_qipl5")
text_overrun_behavior = 3
max_lines_visible = 1
visible_characters = 0
visible_ratio = 0.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="date" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "yesterday
"
label_settings = SubResource("LabelSettings_f8iyg")
max_lines_visible = 1
visible_characters = 10

[node name="unreadcount" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_tub36")
horizontal_alignment = 2
max_lines_visible = 1
visible_characters = 3
visible_ratio = 1.5

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="menu" type="Window" parent="."]
unique_name_in_owner = true
transparent_bg = true
title = "Action menu"
position = Vector2i(150, 50)
size = Vector2i(250, 100)
visible = false
transient = true

[node name="VBoxContainer" type="VBoxContainer" parent="menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="username2" type="Label" parent="menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Unnamed Contact"
text_overrun_behavior = 4
max_lines_visible = 1

[node name="delete" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fndwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_4r6ii")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fndwc")
text = "Delete"

[node name="TimerCheckOnline" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TimerChangeOffline" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
autostart = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="about_to_popup" from="menu" to="." method="_on_window_about_to_popup"]
[connection signal="close_requested" from="menu" to="." method="_on_menu_close_requested"]
[connection signal="pressed" from="menu/VBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="timeout" from="TimerCheckOnline" to="." method="_on_timer_check_online_timeout"]
[connection signal="timeout" from="TimerChangeOffline" to="." method="offline"]
